  requested multiple times was fixed.
- libgwyprocess: New function for performing one step of facet levelling.
- libgwyddion: New data type GwyRandGenSet providing a convenient set of random
  number generators and functions for sampling from different distributions.
- libgwyprocess: DataField z-value format is now based on autorange instead of
  the full data range.

Modules:
- WinSTM (new): Import WinSTM data files.
- Mark by Segmentation (new): Another segmentation/grain marking module, based
  on the classic Vincent algorithm.
- Grain filter (new): Filtering of grains by range criteria and logical
  expressions.
- Slope statistics (new): Statistics were split off Slope distributions, the
  GUI and functionality is the same as before.
- Lattice synthesis (new): Construction of surfaces based on Voronoi
  tesselation of randomized lattices.
- Grain removal by threshold: Removed.  Threshold-based removal is replaced
  by Grain filter (also replacing it the default toolbox).  Removal of grains
  touching image edges is a standalone menu function now.
- Mask operations: Function for removal of grains touching image edges was
  added.
- Mask editor tool: Fill voids handles correctly different connectivity of
  grain exterior, noticeable for grains separated only by thin lines.  It is
  also possible to fill only simple-connected grains.
- Pixmap: Vertical and horizontal rulers always use the same number format.
  The gap between image and false colour map can be adjusted, as well as the
  gap beteween the inset scale bar and image border.  Missing lower left corner
  of the false colour map scale border was fixed.  Text antialising can be
  disabled.
- Affine distortion: The ACF image can be zoomed.
- NT-MDT: Double inversion of new spectroscopy data properly checked and fixed.
- Slope distribution: Masking is supported.  Plot of total gradient was added.
- NanoScan: A couple of memory-hadling bugs was fixed.